<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.test.TestFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvLabelTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/check_speed_network"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDownTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/down_speed_test"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelTest" />

    <TextView
        android:id="@+id/tvDownTestResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/tvDownTest"
        app:layout_constraintTop_toTopOf="@+id/tvDownTest" />

    <TextView
        android:id="@+id/tvUpTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/up_speed_test"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDownTest" />

    <TextView
        android:id="@+id/tvUpTestResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/tvUpTest"
        app:layout_constraintTop_toTopOf="@+id/tvUpTest" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Измерить"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUpTest"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="10dp"
        style="@style/Widget.Material3.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>